--- a/index.html
+++ b/index.html
@@ -37,22 +37,23 @@
                 <input type="text" placeholder="First Name" id="First Name" required>
                 <input type="text" placeholder="Middle Name" id="Middle Name" required>
                 <input type="text" placeholder="Last Name" id="Last Name" required>
-                <select name="Sex" id="Sex" required>
+                <input type="text" placeholder="Sex" id="Sex" required>
+                <!-- <select name="Sex" id="Sex" required>
                     <option value="">Sex</option>
                     <option value="Male">Male</option>
                     <option value="Female">Female</option>
                     <option value="I'd rather not say">I'd rather not say</option>
-                </select>
+                </select> -->
                 <input type="text" placeholder="Date Of Birth" id="DOB" required>
                 <input type="number" placeholder="Phone Number" id="Phone Number" required>
                 <input type="email" placeholder="Email (eg. youremail@emailprovider.com)" id="email" required>
                 <input type="text" placeholder="Address" id="Address" required>
-                <!-- <input type="text" placeholder="Exam Type (UTME/SSCE)" id="Exam Type" required> -->
-                <select name="cars" id="cars" required>
+                <input type="text" placeholder="Exam Type (UTME/SSCE)" id="Exam Type" required>
+                <!-- <select name="cars" id="cars" required >
                     <option value="">EXAM TYPE</option>
                     <option value="UTME">UTME</option>
                     <option value="SSCE">SSCE</option>
-                </select>
+                </select> -->
             </div>
             <center><input type="button" value="Send" id="btn2" onclick="sendMail()"></center>
         </form>
