--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h3>Online Math Class</h3>
         </div>
         <div class="swipe">
-            <h3><a href="#apply" class="button-link">Apply Now</a></h3>
+            <h3><a href="#contact" class="button-link">Apply Now</a></h3>
         </div>
     </div>
 
