--- a/index.html
+++ b/index.html
@@ -28,6 +28,24 @@
         </div>
     </div>
 
+    <section class="about" id="about">
+        <h1>Everyone is welcome!</h1>
+        <p>
+            Good day to you. I'm delighted to welcome you to this exclusive math 
+            tutoring session, calles Mathematics Haven. It is hosted by the CEO of TOA_Hephzibah Tutor, 
+            a mathematics scholar. This programmes is designed to help students who are interested
+            in mathematics and to help them become more proficient in the subject.
+        </p>
+        <p>
+            Beginning on December 2nd, 2023, the tutorial will be held every saturday from 9 to
+            11am while we wait for more users to sign up on the platform, I'd like to welcome everyone to this platform.
+            I'd like to welcome everyone to this platform one again.
+        </p>
+        <p>
+            <span>-Adeniyi O. Tosin</span>
+        </p>
+    </section>
+
     <section class="contact" id="contact">
         <center>
             <h11>Apply <span>Now</span></h11>
